Added coder link

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
         </div>
         <hr />
         <p class="coder">
-            Coded by Catarina Ramos
+            Coded by <a href="">Catarina Ramos</a>
+            
         </p>
     </div>
     <script src="src/script.js"></script>
