Added link to open-source code

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <hr />
         <p class="coder">
-            Coded by <a href="">Catarina Ramos</a>
+           <a href="https://github.com/catarinapfcramos/Weather-app" target="_blank">Open-source code</a> by Catarina Ramos
             
         </p>
     </div>
