--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="container">
-
+        <div class="weather-app">
         <p class="date" id="date"></p>
         <form id="search-form">
             <div class="row g-3 align-items-center">
@@ -157,6 +157,7 @@
            <a href="https://github.com/catarinapfcramos/Weather-app" target="_blank">Open-source code</a> by Catarina Ramos
             
         </p>
+        </div>
     </div>
     <script src="src/script.js"></script>
 </body>
