Updated formatDate function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="weather-app">
-        <p class="date" id="date"></p>
+        <p class="date">Last updated at: <span id="date"></span></p>
         <form id="search-form">
             <div class="row g-3 align-items-center">
                 <div class="col-8">
@@ -37,7 +37,7 @@
         <div class="currentCity" id="currentCity">
 
         </div>
-        <p id="description"></p>
+        <p class="description" id="description"></p>
 
         <i class="fas fa-cloud-sun-rain main-weather-icon"></i>
         <div>
