Added main weather icon from API

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
         </div>
         <p class="description" id="description"></p>
-
-        <i class="fas fa-cloud-sun-rain main-weather-icon"></i>
+        <img src="#" alt="weather icon" class="main-icon" id="main-icon" />
         <div>
             <span class="currentTemperature" id="currentTemperature"></span>
             <span class="units">
