Implemented unit converter of max and min temperatures

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="temperature">
             <p>
                 <span class="max-temp" id="max-temp">
-                </span><span id="max-degrees">°C</span>
+                </span><span id="max-degrees">°</span>
                 /
                 <span class="min-temp" id="min-temp">
-                </span><span id="min-degrees">°C</span>
+                </span><span id="min-degrees">°</span>
             </p>
         </div>
         <div class="details">
