Added forecast JS

--- a/index.html
+++ b/index.html
@@ -64,93 +64,7 @@
             </p>
         </div>
         <hr />
-        <div class="row">
-            <div class="col">
-                <p class="week-day">
-                    THU
-                </p>
-                <i class="fas fa-cloud-showers-heavy other-weather-icons"></i>
-                <div class="temperature">
-                    <p>
-                        <span class="maximum-temp">
-                            12°
-                        </span>
-                        /
-                        <span class="minimum-temp">
-                            6°
-                        </span>
-                    </p>
-                </div>
-            </div>
-            <div class="col">
-                <p class="week-day">
-                    FRI
-                </p>
-                <i class="fas fa-cloud-showers-heavy other-weather-icons"></i>
-                <div class="temperature">
-                    <p>
-                        <span class="maximum-temp">
-                            12°
-                        </span>
-                        /
-                        <span class="minimum-temp">
-                            6°
-                        </span>
-                    </p>
-                </div>
-            </div>
-            <div class="col">
-                <p class="week-day">
-                    SAT
-                </p>
-                <i class="fas fa-cloud-showers-heavy other-weather-icons"></i>
-                <div class="temperature">
-                    <p>
-                        <span class="maximum-temp">
-                            12°
-                        </span>
-                        /
-                        <span class="minimum-temp">
-                            6°
-                        </span>
-                    </p>
-                </div>
-            </div>
-            <div class="col">
-                <p class="week-day">
-                    SUN
-                </p>
-                <i class="fas fa-cloud-showers-heavy other-weather-icons"></i>
-                <div class="temperature">
-                    <p>
-                        <span class="maximum-temp">
-                            12°
-                        </span>
-                        /
-                        <span class="minimum-temp">
-                            6°
-                        </span>
-                    </p>
-                </div>
-            </div>
-            <div class="col">
-                <p class="week-day">
-                    MON
-                </p>
-                <i class="fas fa-cloud-showers-heavy other-weather-icons"></i>
-                <div class="temperature">
-                    <p>
-                        <span class="maximum-temp">
-                            12°
-                        </span>
-                        /
-                        <span class="minimum-temp">
-                            6°
-                        </span>
-                    </p>
-                </div>
-            </div>
-        </div>
+        <div class="row weather-forecast" id="forecast"> </div>
         <hr />
         <p class="coder">
            <a href="https://github.com/catarinapfcramos/Weather-app" target="_blank">Open-source code</a> by Catarina Ramos
